--- a/index.html
+++ b/index.html
@@ -5,49 +5,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonardo Rosário - Desenvolvedor de Aplicativos</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .card {
+            border: none;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-title {
+            font-weight: bold;
+        }
+
+        .badge {
+            font-size: 0.8rem;
+        }
+
+        footer {
+            background-color: #343a40;
+            color: #fff;
+            padding: 1rem;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center">Bem-vindo ao meu site</h1>
-        <p class="text-center">Aqui você encontrará informações sobre os meus aplicativos</p>
-
-        <h2 class="mt-5">📱 Meus Aplicativos</h2>
-        <div class="card mt-3">
-            <div class="card-body">
-                <h3 class="card-title">Dinheiro em Dia</h3>
-                <p class="card-text">
-                    Seja o dono das suas finanças com o Dinheiro em Dia!
-                    Nosso aplicativo de gerenciamento financeiro pessoal ajuda você a controlar suas despesas,
-                    receitas e metas de forma fácil e intuitiva. Com gráficos,
-                    você terá uma visão clara da sua situação financeira.
-                    E o melhor: todos os dados são armazenados localmente no seu dispositivo,
-                    garantindo a segurança e privacidade das suas informações.
-                    Não perca mais tempo se preocupando com suas finanças.
-                    Baixe o Dinheiro em Dia e comece a gerenciar suas finanças de forma inteligente!
-                </p>
-                <p class="card-text">Status: <span class="badge bg-success">Disponível na Play Store</span></p>
-                <div class="mt-4">
-                    <a class="btn btn-primary"
-                        href="https://play.google.com/store/apps/details?id=br.com.leonardorosario.dinheiroemdia">Ver na
-                        Google Play</a>
-                    <a class="btn btn-link btn-sm" href="https://sites.google.com/view/poli-dinheiro-em-dia">Política de
-                        Privacidade</a>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Dev. Leonardo Rosário</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#aplicativos">Aplicativos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#informacoes">Informações Técnicas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contato">Contato</a>
+                    </li>
+                </ul>
             </div>
         </div>
+    </nav>
 
-        <h2 class="mt-5">🛠 Informações Técnicas</h2>
-        <ul>
-            <li>Hospedagem: GitHub Pages</li>
-            <li>Finalidade: Servir como o "Developer Website" exigido pelo Google Play Console e validar o arquivo de
-                publicidade programática.</li>
-            <li>E-mail para Suporte: desenvolvedor.rosario@gmail.com</li>
-        </ul>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Bem-vindo ao meu site</h1>
+        <p class="text-center">Aqui você encontrará informações sobre os meus aplicativos</p>
 
-        <footer class="text-center mt-5">
-            <p>&copy; 2025 Leonardo Rosario</p>
+        <section id="aplicativos">
+            <h2 class="mt-5">📱 Meus Aplicativos</h2>
+            <div class="card mt-3">
+                <div class="card-body">
+                    <h3 class="card-title">Dinheiro em Dia</h3>
+                    <p class="card-text">
+                        Seja o dono das suas finanças com o Dinheiro em Dia!
+                        Nosso aplicativo de gerenciamento financeiro pessoal ajuda você a controlar suas despesas,
+                        receitas e metas de forma fácil e intuitiva. Com gráficos,
+                        você terá uma visão clara da sua situação financeira.
+                        E o melhor: todos os dados são armazenados localmente no seu dispositivo,
+                        garantindo a segurança e privacidade das suas informações.
+                        Não perca mais tempo se preocupando com suas finanças.
+                        Baixe o Dinheiro em Dia e comece a gerenciar suas finanças de forma inteligente!
+                    </p>
+                    <p class="card-text">Status: <span class="badge bg-success">Disponível na Play Store</span></p>
+                    <div class="mt-4">
+                        <a class="btn btn-primary"
+                            href="https://play.google.com/store/apps/details?id=br.com.leonardorosario.dinheiroemdia">Ver
+                            na Google Play</a>
+                        <a class="btn btn-link btn-sm"
+                            href="https://sites.google.com/view/poli-dinheiro-em-dia">Política de
+                            Privacidade</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="informacoes">
+            <h2 class="mt-5">🛠 Informações Técnicas</h2>
+            <ul>
+                <li>Hospedagem: GitHub Pages</li>
+                <li>Finalidade: Servir como o "Developer Website" exigido pelo Google Play Console e validar o arquivo de
+                    publicidade programática.</li>
+                <li>E-mail para Suporte: desenvolvedor.rosario@gmail.com</li>
+            </ul>
+        </section>
+
+        <footer id="contato" class="text-center mt-5">
+            <p>&copy; 2025 Dev. Leonardo Rosario</p>
+            <p>desenvolvedor.rosario@gmail.com</p>
         </footer>
     </div>
 
