Adicionado politica de privacidade

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </a>
 
                         <a class="btn btn-outline-secondary"
-                            href="https://sites.google.com/view/poli-dinheiro-em-dia"
+                            href="politicas/politica_privacidade_dinheiro_em_dia.html"
                             target="_blank">
                             Política de Privacidade
                         </a>
